--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav class="">
             <ul>
@@ -24,8 +24,8 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
-    <main class="content">
+    <figure></figure>                                 
+    <main>
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine otimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -48,7 +48,7 @@
             </p>
         </section>
     </main>
-    <aside class="benefits">
+    <aside>
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="ideas to money logo" />
@@ -71,7 +71,7 @@
             </p>
         </section>
     </aside>
-    <footer class="footer">
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
